--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
-  "name": "elder",
+  "name": "react-express",
   "version": "0.16.1",
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
-    "@material-ui/core": "^4.2.0",
-    "@material-ui/icons": "^4.2.1",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "concurrently": "^4.1.2",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
-    "nodemailer": "^6.3.0",
     "nodemon": "^1.19.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
