--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "concurrently": "^4.1.2",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "handlebars": "^4.3.0",
     "nodemon": "^1.19.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
